# fusion-_extension

./: COSMOS_IMPLEMENTATION_SUMMARY.md  README.md  STRUCTURE_SUMMARY.md  deploy-juno-testnet.sh  package-lock.json  package.json  setup-local-cosmos.sh  test-contracts.sh
.github/workflows/: optimize-wasm.yml
cosmos-contracts/: Cargo.toml  LOCAL_DEPLOYMENT.md  README.md  optimize.sh
cosmos-contracts/.cargo/: config.toml
cosmos-contracts/artifacts/: cosmos_escrow.wasm  simple_test.wasm  simple_test.wat  simple_test_nobulk.wat
cosmos-contracts/escrow/: Cargo.toml
cosmos-contracts/escrow/src/: error.rs  lib.rs  msg.rs  state.rs
cosmos-contracts/resolver/: Cargo.toml
cosmos-contracts/resolver/src/: error.rs  lib.rs  msg.rs  schema.rs  state.rs
cosmos-contracts/simple-test/: Cargo.toml
cosmos-contracts/simple-test/src/: lib.rs
tests/: main-cosmos.spec.ts
tests/cosmos/: README.md  config.ts  contracts.ts  wallet.ts
